# MLbook

./: .gitignore  README.md
cnn/: Untitled.ipynb  cnn.ipynb  results.csv  results.json
cnn/.ipynb_checkpoints/: cnn-checkpoint.ipynb
cnn/runs/Dec05_22-08-19_Yanfeis-MBP-Run(lr=0.01, batch_size=100, shuffle=True)/: events.out.tfevents.1670249299.Yanfeis-MBP.82678.0
cnn/runs/Dec05_22-09-00_Yanfeis-MBP-Run(lr=0.01, batch_size=100, shuffle=False)/: events.out.tfevents.1670249340.Yanfeis-MBP.82678.1
cnn/runs/Dec05_22-09-41_Yanfeis-MBP-Run(lr=0.01, batch_size=1000, shuffle=True)/: events.out.tfevents.1670249381.Yanfeis-MBP.82678.2
cnn/runs/Dec05_22-10-24_Yanfeis-MBP-Run(lr=0.01, batch_size=1000, shuffle=False)/: events.out.tfevents.1670249424.Yanfeis-MBP.82678.3
decisiontree/: ID3.py
featureextraction/: Feature extraction.ipynb
gaumixmod/: gaussian mixture.ipynb  kmeans.py  readme.md
gaumixmod/.ipynb_checkpoints/: gaussian mixture-checkpoint.ipynb
knn/: KNN.ipynb  kdtree.c  kdtree.ipynb  kdtree.py  qselect.py  qsort.py
logisticregression/: LogtisticRegression.ipynb
mat_factor/: Matrix Factorization.ipynb
naivebayes/: NaiveBayes.ipynb  NaiveBayes.md
naivebayes/.ipynb_checkpoints/: NaiveBayes-checkpoint.ipynb
nn/dnn/: CMakeLists.txt  Makefile  main.cpp
nppractise/: 100_Numpy_exercises.ipynb
nppractise/.ipynb_checkpoints/: 100_Numpy_exercises-checkpoint.ipynb
pipeline/: Pipeline.ipynb
pipeline/.ipynb_checkpoints/: Pipeline-checkpoint.ipynb
(+4 files in other folders)
